# netviz

./: .env  .env.example  .gitignore  JIRA_EPICS.md  README.md  pyproject.toml
netviz/: __init__.py  config.py  db.py  dns_resolver.py
netviz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
netviz/exporter/: __main__.py  snapshot.py  trees.py
netviz/web/backend/: admin.py  auth.py  main.py  scheduler.py  search.py
scripts/: dev-backend.sh  dev-frontend.sh  install-systemd.sh  install.sh  snapshot-now.sh  start.sh
snapshot/: snapshot.json
snapshot/device/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  (+77 more)
systemd/: netviz-backend.service  netviz-dns.service  netviz-dns.timer  netviz-exporter.service  netviz-exporter.timer
tests/: search_cases.json  test_search_parity.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/frontend/src/: App.tsx  styles.css
web/frontend/src/components/: AdminModal.tsx  AdminPanel.tsx  DeviceDrawer.tsx  DeviceTable.tsx  FilterBar.tsx  GraphView.tsx  HelpModal.tsx  LocationTree.tsx  Login.tsx  TopBar.tsx  TreeMapView.tsx
web/frontend/src/lib/: api.ts  cytoscape-config.ts  deviceIcon.tsx  filters.ts  search.test.ts  (+4 more)
(+1 files in other folders)
