[project]
name = "netviz"
version = "0.1.0"
description = "Snapshot exporter and read-only web UI for Observium network data"
requires-python = ">=3.10"
dependencies = [
    "mysql-connector-python>=9.0",
    "bcrypt>=4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyjwt>=2.8",
    "python-dotenv>=1.0",
]

[project.scripts]
netviz-export = "netviz.exporter.__main__:main"
netviz-serve  = "netviz.web.backend.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["netviz*"]
